fix horizontal scrolling issue

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,13 @@ html, * {
   cursor: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=') 0 0, none !important;
 }
 
+@media (hover: none) and (pointer: coarse) {
+  html, * {
+    cursor: default !important;
+  }
+}
+
+
 html {
   scroll-behavior: smooth;
 }
@@ -13,6 +20,10 @@ svg {
   -webkit-mask-image: none;
   will-change: transform;
   transform: translateZ(0);
+}
+
+section {
+  overflow-x: hidden;
 }
 
 /* Simple circle cursor */
